--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,11 @@
 <header class="site-header">
   <div class="container">
-    <h1><a href="{{ page.lang == 'en' | default: false | ternary: '/en/', '/' }}">Ryoko Kino</a></h1>
+    {% if page.lang == 'en' %}
+      <h1><a href="/en/">Ryoko Kino</a></h1>
+    {% else %}
+      <h1><a href="/">Ryoko Kino</a></h1>
+    {% endif %}
+
     <nav>
       {% if page.lang == 'en' %}
         <a href="/en/cv/">CV</a>
