--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <div class="container">
+  <div class="container header-inner">
     {% if page.lang == 'en' %}
       <h1><a href="/en/">Ryoko Kino</a></h1>
     {% else %}
