Subpages: compact header (no awkward wrapping, larger text, overlay toned down)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="site-header {% if page.header_size == 'small' %}is-compact{% endif %}">
   <div class="container header-inner">
     {% if page.lang == 'en' %}
       <h1><a href="/en/">Ryoko Kino's Home</a></h1>
