--- a/_includes/sidebar-profile.html
+++ b/_includes/sidebar-profile.html
@@ -3,8 +3,10 @@
   {% if page.lang == 'en' %}
     <h3>Ryoko KINO</h3>
     <p>
-      JSPS Postdoctoral Fellow (PD)<br>
-      RIKEN (from Oct. 2025)<br>
+      <a href="https://www.jsps.go.jp/english/e-pd/"  target="_blank" rel="noopener noreferrer">JSPS Postdoctoral Fellow (PD)</a><br>
+      <a href="https://www.riken.jp/en/research/labs/ecl/mes_riken_ecl/index.html"  target="_blank" rel="noopener noreferrer">Meson ECL Research Team</a><br>
+      <a href="https://www.nishina.riken.jp/index_e.html"  target="_blank" rel="noopener noreferrer">RIKEN Nishina Center for Accelerator-Based Science</a><br>
+      (from Oct. 2025)<br>
       Hypernuclear/kaonic-nuclei experiments
     </p>
     <p class="mono">ryoko.kino [at] riken.jp</p>
@@ -17,8 +19,10 @@
   {% else %}
     <h3>木野 量子（Ryoko KINO）</h3>
     <p>
-      日本学術振興会 特別研究員PD<br>
-      理化学研究所（2025年10月〜）<br>
+      <a href="https://www.jsps.go.jp/j-pd/"  target="_blank" rel="noopener noreferrer">日本学術振興会 特別研究員PD</a><br>
+      <a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/"  target="_blank" rel="noopener noreferrer">中間子ECL研究チーム</a><br>     
+      <a href="https://www.nishina.riken.jp/index.html"  target="_blank" rel="noopener noreferrer">理化学研究所 仁科加速器科学研究センター</a><br>
+      （2025年10月〜）<br>
       ハイパー核・K中間子原子核 実験
     </p>
     <p class="mono">ryoko.kino [at] riken.jp</p>
